Fixed stretch issue

--- a/style.css
+++ b/style.css
@@ -1,22 +1,58 @@
+.body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .grid-container {
     display:flex;
     flex-direction: column;
-    padding: 4px;
+    margin: 4px;
+    align-items: stretch;
+    justify-content: center;
+    width:500px;
+    height: 500px;
+    border: 2px solid black;
+    object-fit: fill;
+
 }
 
-.row {
+.btn-container {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+}
+
+.btn {
+    display: flex;
+    background-color: blue;
+    color: white;
+    font-weight: 900;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 24px;
+    padding: 16px;
     flex: 1 1 auto;
+}
+.row {
+    flex-direction: row;
+    
+    
 }
 .row, .column{
     display:flex;
-    min-width: 10px;
-    min-height: 10px;
-    padding:1px;
-    gap: 1px;
+    flex:1 1 auto;
 }
 
 .column {
-    border: 1px solid black;
+    min-width: 3px;
+    min-height: 3px;
+    
+    border: 1px dotted grey;
+
 }
